# bevy

./: Cargo.toml
crates/bevy_app/src/: task_pool_options.rs
crates/bevy_core/src/: bytes.rs
crates/bevy_derive/src/: lib.rs  shader_resources.rs  uniform.rs
crates/bevy_render_prototype/: Cargo.toml
crates/bevy_render_prototype/src/: buffer.rs  color.rs  commands.rs  device.rs  device_queue.rs  lib.rs  shader_resources.rs  wgpu.rs
crates/bevy_render_prototype/src/pipeline/: mod.rs  pipeline.rs  pipeline_compiler.rs  pipeline_layout.rs  render_pipelines.rs  vertex_format.rs
crates/bevy_render_prototype/src/pipeline/bind_groups/: binding.rs  mod.rs
crates/bevy_render_prototype/src/shader/: mod.rs  shader.rs  shader_defs.rs
crates/bevy_render_prototype/src/texture/: mod.rs
crates/bevy_tasks/src/: lib.rs  task_pool.rs
examples/shader/: shader_resources.rs
